# AdventOfCode

./: LICENSE.txt  README.md
2015/: .gitignore  Cargo.toml  README.md
2015/src/: main.rs  utils.rs
2016/: .gitignore  Cargo.toml  Makefile  README.md  test.py
2016/src/: aoc.h  aoc.rs  day01.hs  day02.hs  day03.hs  day04.hs  day05.rs  day06.hs  day07.hs  day08.hs  day09.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.rs  day15.hs  day16.c  day17.rs  day18.c  day19.hs  day20.hs  day21.hs  day22.hs  day23.hs  day24.hs  day25.hs  utils.hs
2017/: .gitignore  Makefile  README.md
2017/src/: day01.cor  day02.cor  day03.cor  day04.cor  day05.cor  day06.cor  day07.cor  day08.cor  day09.cor  day10.cor  day11.cor  day12.cor  day13.cor  day14.cor  day15.c  day15.cor  day16.cor  day17.cor  day18.cor  day19.cor  day20.cor  day21.cor  day22.cor  day23.cor  day24.cor  day25.cor
2018/: .gitignore  Makefile  README.md  bench.py
2018/lib/: point.h  set.h  vec.h
2018/src/: aoc.h  day01.c  day02.c  day03.c  day04.cpp  day05.c  day06.c  day07.cpp  day08.c  day09.cpp  day10.c  day11.c  day12.c  day13.c  day14.c  day15.cpp  day16.c  day17.c  day18.c  day19.c  day20.cpp  day21.c  day22.cpp  day23.cpp  day24.c  day25.c
2019/: .gitignore  README.md  main.py  run.py  utils.py
2019/asm/: day01.s  day02.s
2019/day2/: day2.py
2019/day3/: day3.py
2020/: .gitignore  README.md  run.py  utils.py
2021/: .gitignore  README.md  aoc_font.py  main.py  run.py  test.py  utils.py
2022/: .gitignore  README.md  aoc_font.py  main.py  utils.py
2023/: .gitignore  Makefile  README.md
(+169 files in other folders)
