[package]
    name = "aoc-2016"
    version = "0.1.0"
    edition = "2018"

[dependencies]
    rust-crypto = "0.2.36"
    fancy-regex = "0.10.0"

[[bin]]
    name = "day05"
    path = "src/day05.rs"

[[bin]]
    name = "day14"
    path = "src/day14.rs"

[[bin]]
    name = "day17"
    path = "src/day17.rs"
